--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.5
 Django==3.2.3
 django-allauth==0.44.0
-django-cart==1.0.4
+django-countries==7.5.1
 django-crispy-forms==1.11.2
 django-summernote==0.8.11.6
 gunicorn==20.1.0
